[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Advanced AI Research Agent with Streamlit frontend"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0", 
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.40",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "prompts", "snapshot_Operations", "streamlit", "webOperations"]